// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ButtonTileContent /> should render a button tile content in the hollow style 1`] = `
<styled.div
  title="dummy button title"
>
  <styled.div>
    <styled.div>
      <FontAwesomeIcon
        color="#7362F5"
        icon="star"
        size="xlarge"
        type="solid"
      />
    </styled.div>
    <styled.div>
      <styled.span>
        dummy button title
      </styled.span>
      <styled.span>
        dummy button description
      </styled.span>
    </styled.div>
  </styled.div>
</styled.div>
`;

exports[`<ButtonTileContent /> should render a button tile content with a font awesome icon 1`] = `
<styled.div
  title="dummy button title"
>
  <styled.div>
    <styled.div>
      <FontAwesomeIcon
        color="#7362F5"
        icon="star"
        size="xlarge"
        type="solid"
      />
    </styled.div>
    <styled.div>
      <styled.span>
        dummy button title
      </styled.span>
      <styled.span>
        dummy button description
      </styled.span>
    </styled.div>
  </styled.div>
</styled.div>
`;

exports[`<ButtonTileContent /> should render a button tile content with an IntelliIcon 1`] = `
<styled.div
  title="dummy button title"
>
  <styled.div>
    <styled.div>
      <IntelliIcon
        color="#7362F5"
        icon="alert"
        size="xlarge"
      />
    </styled.div>
    <styled.div>
      <styled.span>
        dummy button title
      </styled.span>
      <styled.span>
        dummy button description
      </styled.span>
    </styled.div>
  </styled.div>
</styled.div>
`;

exports[`<ButtonTileContent /> should render a button tile content with label 1`] = `
<styled.div
  title="dummy label"
>
  <styled.div>
    <styled.div>
      <styled.span>
        dummy label
      </styled.span>
    </styled.div>
  </styled.div>
</styled.div>
`;

exports[`<ButtonTileContent /> should render a button tile content with nothing 1`] = `
<styled.div>
  <styled.div>
    <styled.div />
  </styled.div>
</styled.div>
`;
